--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,10 @@
            const body = {id_token: response.credential}
 
            let url = (window.location.hostname.includes('localhost'))
-                    ? 'http://localhost:8080/api/auth/google'
-                    : 'https://restserver-nodejs-ac.herokuapp.com/api/auth/google'
+                    ? "http://localhost:8080/api/auth/google"
+                    : "https://restserver-nodejs-ac.herokuapp.com/api/auth/google"
 
-           fetch(url,{
+           fetch("https://restserver-nodejs-ac.herokuapp.com/api/auth/google",{
                method:'POST',
                headers:{
                    'Content-Type':'application/json'
