--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                     ? "http://localhost:8080/api/auth/google"
                     : "https://restserver-nodejs-ac.herokuapp.com/api/auth/google"
 
-           fetch("https://restserver-nodejs-ac.herokuapp.com/api/auth/google",{
+           fetch(url,{
                method:'POST',
                headers:{
                    'Content-Type':'application/json'
@@ -49,7 +49,6 @@
            .then(resp => {
                console.log(resp)
                localStorage.setItem('email',resp.usuario.correo)
-               location.reload();
            })
            .catch(console.warn);
 
